# DiffSMat

./: .gitignore  CMakeLists.txt  README.md
ci/: format.sh
cmake/: FindMKL.cmake  FindTBB.cmake  sploosh_utils.cmake
src/core/: MatrixDerivative.hpp  RCWAScatterMatrix.cpp  RCWAScatterMatrix.h  ScatterMatrixDerivative.hpp
src/dcomplex/: DComplex.hpp  DComplexMath.hpp  DComplexMatrixFunc.hpp  EigenNumTraits.hpp  MatrixExponential.hpp
src/rcwa/: BlockToeplitzMatrixXcs.cpp  BlockToeplitzMatrixXcs.h  FourierSolver1D.cpp  FourierSolver1D.h  FourierSolver2D.cpp  FourierSolver2D.h  FourierSolverPolygon.cpp  FourierSolverPolygon.h  LayerStructure.h  MKLEigenSolver.cpp  MKLEigenSolver.h  MathFunction.h  ScatterMatrixSolver.cpp  ScatterMatrixSolver.h  ToeplitzMatrixXcs.cpp  ToeplitzMatrixXcs.h  WaveEquationCoeff.cpp  WaveEquationCoeff.h  WaveEquationSolver.cpp  WaveEquationSolver.h  defns.h  dispersion.cpp  dispersion.h
src/tests/: CMakeLists.txt  test_dcomplex_deriv.cpp  test_dcomplex_eigen.cpp  test_mat_exp.cpp  test_mat_exp_deriv.cpp  test_mat_product.cpp  test_matrix_deriv.cpp  test_rcwa.cpp  test_smat_deriv.cpp
src/utils/: macros.h  timer.hpp
